--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -117,7 +117,7 @@ span {
       }
 
       .nav-menu-mobile {
-        display: block;
+        display: none;
       }
 
       .nav-menu-toggle {
@@ -178,7 +178,7 @@ span {
   }
 }
 
-@media screen and (min-width: 801px) {
+@media screen and (min-width: 1031px) {
   html {
     scroll-padding-top: 176px;
   }
