--- a/scss/_drinks.scss
+++ b/scss/_drinks.scss
@@ -33,7 +33,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1030px) {
   #categories.drinks-layout {
     margin-left: auto;
     margin-right: auto;
