--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -141,7 +141,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1030px) {
   #categories.location-layout {
     margin-left: auto;
     margin-right: auto;
